Updated names, versions and URLs

--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "jekyll-susy-starter-kit",
-  "version": "1.0.0",
-  "homepage": "http://www.website.info",
-  "description": "Jekyll+Susy Starter Kit",
+  "name": "S1SYPHOS.github.io",
+  "version": "0.0.1",
+  "homepage": "http://daktylos.net",
+  "description": "S1SYPHOS.github.io",
   "author": "S1SYPHOS <hello@daktylos.net>",
   "license": "MIT",
   "private": true,
