--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # MAIN
-title:               Jekyll-Susy-Starter-Kit
-# description:         Jekyll-Susy-Starter-Kit description
+title:               S1SYPHOS.github.io
+# description:         S1SYPHOS.github.io description
 url:                 http://localhost:3000
-paginate:            1
+paginate:            5
 baseurl:             /
 source:             source
 destination:        build
@@ -14,6 +14,6 @@ author:
   email:             hello@daktylos.net
 
 # MISC
-version:             1.0.0
+version:             0.0.1
 github:
-  repo:              https://github.com/S1SYPHOS/Jekyll-Susy-Starter-Kit
+  repo:              https://github.com/S1SYPHOS/S1SYPHOS.github.io
