--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # MAIN
-title:               S1SYPHOS.github.io
+title:               DAKTYLOS
 # description:         S1SYPHOS.github.io description
 url:                 http://localhost:3000
 paginate:            5
