--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "license": {
     "type": "MIT",
     "url": "https://github.com/S1SYPHOS/S1SYPHOS.github.io/blob/master/LICENSE.txt"
-},
+  },
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.0",
     "grunt-browser-sync": "^2.1.3",
+    "grunt-build-control": "^0.5.0",
     "grunt-cache-bust": "^0.4.13",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.0",
