--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-dev-update": "^1.3.0",
     "grunt-jekyll": "^0.4.2",
     "grunt-modernizr": "^0.6.0",
+    "grunt-pagespeed": "^1.0.0",
     "grunt-penthouse": "^0.2.1",
     "grunt-sass": "^0.18.1",
     "grunt-scss-lint": "^0.3.6",
