--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "grunt-penthouse": "^0.2.1",
     "grunt-sass": "^0.18.1",
     "grunt-scss-lint": "^0.3.6",
+    "grunt-shell": "^1.1.2",
     "grunt-usemin": "^3.0.0",
     "jshint-stylish": "^2.0.1",
     "load-grunt-tasks": "^3.1.0",
