--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^3.0.0",
+    "grunt-autoprefixer": "^3.0.3",
     "grunt-browser-sync": "^2.1.3",
     "grunt-build-control": "^0.5.0",
     "grunt-cache-bust": "^0.4.13",
@@ -35,6 +35,7 @@
     "grunt-modernizr": "^0.6.0",
     "grunt-pagespeed": "^1.0.0",
     "grunt-penthouse": "^0.2.1",
+    "grunt-postcss": "^0.5.5",
     "grunt-sass": "^0.18.1",
     "grunt-scss-lint": "^0.3.6",
     "grunt-shell": "^1.1.2",
