--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jshint-stylish": "^2.0.1",
     "load-grunt-tasks": "^3.1.0",
     "node-sass": "^2.1.1",
+    "pixrem": "^1.3.1",
     "time-grunt": "^1.2.1"
   }
 }
