--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -50,7 +50,7 @@ linters:
 
   HexNotation:
     enabled: true
-    style: lowercase # or 'uppercase'
+    style: uppercase # or 'lowercase'
 
   HexValidation:
     enabled: true
