--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "grunt-cache-bust": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.1",
-    "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.9.2",
@@ -37,7 +37,7 @@
     "grunt-pagespeed": "^1.0.0",
     "grunt-penthouse": "^0.2.1",
     "grunt-postcss": "^0.6.0",
-    "grunt-sass": "^1.0.0",
+    "grunt-sass": "^1.1.0-beta",
     "grunt-scss-lint": "^0.3.8",
     "grunt-shell": "^1.1.2",
     "grunt-usemin": "^3.1.1",
