--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,49 @@
-# BASIC JEKYLL CONFIGURATION
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
 
-# MAIN
-title:              DAKTYLOS
-# description:      S1SYPHOS.github.io description
-url:                http://localhost:3000
-paginate:           5
-baseurl:            /
-source:             source
-destination:        build
-environment:        development
+# Site settings
+title: Your awesome title
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://yourdomain.com" # the base hostname & protocol for your site
 
-# ABOUT / CONTACT
+# Same as the title etc for your site but can instead be
+# called by using 'site.author.name' and so on
+# NOTE: Don't use @ in front of your Twitter username
 author:
-  name:              S1SYPHOS
-  email:             hello@daktylos.net
+  name:
+  email:
+  uri:
+  bio:
+  github:
 
-# MISC
-version:             0.0.1
-github:
-  repo:              https://github.com/S1SYPHOS/S1SYPHOS.github.io
+# Permalink structure and pagination options
+permalink: none
+excerpt_separator: '<!--more-->'
+
+# Build settings
+# Used so Jekyll outputs the site correctly so Gulp can do what it wants
+markdown: kramdown
+source: source
+destination: build
+exclude: ['assets']
+
+# _config.build.yml overwrites these options when you run `gulp build`
+# Enables future posts (posts with dates in the future) and drafts
+future: true
+show_drafts: true
+# Disables the more accurate related posts for faster generating of the site
+lsi: false
+# Only make the last 10 posts so generating isn't slow
+limit_posts: 10
+
+# Extending Jekyll
+gems:
+  - jekyll-sitemap
