--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,7 @@
-.*/
-.DS_Store*
-ehthumbs.db
-Thumbs.db
-*.diff
-*.err
-*.log
-*.orig
-*.rej
-*.swn
-*.swo
-*.swp
-._*
-*~
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
+.tmp
+.sass-cache
 node_modules
 bower_components
 Gemfile.lock
-.tmp
-source/_includes/critical.css
-source/htaccess
+source/.jekyll-metadata
 build
