--- a/package.json
+++ b/package.json
@@ -1,50 +1,68 @@
 {
   "name": "S1SYPHOS.github.io",
   "version": "1.0.0",
-  "description": "S1SYPHOS.github.io",
-  "author": "S1SYPHOS <hello@daktylos.net>",
+  "author": "S1SYPHOS <schmardt@posteo.se>",
+  "homepage": "http://daktylos.net",
+  "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/S1SYPHOS/S1SYPHOS.github.io"
+    "url": "git://github.com/S1SYPHOS/S1SYPHOS.github.io.git"
   },
   "bugs": {
     "url": "https://github.com/S1SYPHOS/S1SYPHOS.github.io/issues"
   },
-  "private": true,
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/S1SYPHOS/S1SYPHOS.github.io/blob/master/LICENSE.txt"
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://opensource.org/licenses/MIT"
+    }
+  ],
+  "scripts": {
+    "build": "bower install && gulp",
+    "jshint": "gulp jshint",
+    "jscs": "jscs gulpfile.js assets/scripts/*.js"
   },
-  "dependencies": {},
+  "engines": {
+    "node": ">= 0.12.0",
+    "npm": ">=2.1.5"
+  },
   "devDependencies": {
-    "autoprefixer-core": "^6.0.1",
+    "asset-builder": "^1.1.0",
+    "autoprefixer": "^6.1.2",
+    "browser-sync": "^2.8.2",
     "css-mqpacker": "^4.0.0",
-    "grunt": "^0.4.5",
-    "grunt-browser-sync": "^2.2.0",
-    "grunt-build-control": "^0.6.1",
-    "grunt-cache-bust": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-htmlmin": "^0.6.0",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-contrib-uglify": "^0.11.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-csscomb": "^3.1.0",
-    "grunt-dev-update": "^1.4.0",
-    "grunt-jekyll": "^0.4.3",
-    "grunt-modernizr": "^1.0.1",
-    "grunt-pagespeed": "^2.0.0",
-    "grunt-penthouse": "^0.3.0",
-    "grunt-postcss": "^0.7.1",
-    "grunt-sass": "^1.1.0",
-    "grunt-scss-lint": "^0.3.8",
-    "grunt-shell": "^1.1.2",
-    "grunt-usemin": "^3.1.1",
-    "jshint-stylish": "^2.1.0",
-    "load-grunt-tasks": "^3.3.0",
-    "node-sass": "^3.4.2",
-    "pixrem": "^3.0.0",
-    "time-grunt": "^1.2.2"
+    "del": "^2.2.0",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-changed": "^1.3.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-flatten": "0.2.0",
+    "gulp-gzip": "^1.2.0",
+    "gulp-htmlmin": "^1.2.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-inject": "^3.0.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-load-plugins": "^1.1.0",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-postcss": "^6.0.1",
+    "gulp-rev": "^6.0.0",
+    "gulp-sass": "^2.0.1",
+    "gulp-scss-lint": "^0.3.8",
+    "gulp-series": "^1.0.2",
+    "gulp-size": "^2.0.0",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "imagemin-pngcrush": "^4.1.0",
+    "jshint": "^2.9.1-rc1",
+    "jshint-stylish": "^2.0.1",
+    "lazypipe": "^1.0.1",
+    "merge-stream": "^1.0.0",
+    "minimist": "^1.1.3",
+    "postcss-merge-rules": "^2.0.3",
+    "postcss-pxtorem": "^3.1.0",
+    "shelljs": "^0.5.3",
+    "traverse": "^0.6.6",
+    "wiredep": "^3.0.0-beta"
   }
 }
