--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "0.2.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-gzip": "^1.2.0",
     "gulp-htmlmin": "^1.2.0",
     "gulp-if": "^2.0.0",
