--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 node_modules
 bower_components
+npm-debug.log
 Gemfile.lock
 build
 workbench
-source/assets/css
-source/assets/js
+source/_data/assets.json
+source/assets/styles
+source/assets/scripts
 source/assets/images
