--- a/package.json
+++ b/package.json
@@ -33,23 +33,35 @@
   ],
   "dependencies": {
     "aos": "^2.0.4",
+    "blazy": "^1.6.2",
     "gumshoe": "github:cferdinandi/gumshoe",
-    "smooth-scroll": "github:cferdinandi/smooth-scroll"
+    "object-fit-images": "^2.5.6",
+    "smooth-scroll": "github:cferdinandi/smooth-scroll",
+    "wallop": "^2.3.0",
+    "waypoints": "^4.0.0"
   },
   "devDependencies": {
+    "assets-webpack-plugin": "^3.4.0",
     "autoprefixer": "^6.4.0",
     "browser-sync": "^2.13.0",
     "gulp": "^3.9.1",
+    "gulp-htmlmin": "^2.0.0",
     "gulp-imagemin": "^3.0.1",
+    "gulp-jshint": "^2.0.1",
     "gulp-newer": "^1.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.1",
     "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-watch": "^4.3.8",
     "imagemin-pngquant": "^5.0.0",
+    "jshint": "^2.9.2",
+    "jshint-stylish": "^2.2.1",
     "postcss-pxtorem": "^3.3.1",
+    "through2": "^2.0.1",
     "vinyl-named": "^1.1.0",
+    "webpack-manifest-plugin": "^1.0.1",
     "webpack-stream": "^3.2.0",
     "yargs": "^4.8.1"
   },
